--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  margin: 0 5px;
+  padding: 0;
 }
+body{
+  background-color:#0f0f0f;
+  font-family: roboto,  arial,  sans-serif;
+}
+.header{
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+.header > div:nth-child(1) > svg:nth-child(1) {
+  color: white;
+  font-size: 29px;
+  margin-bottom: 11px;
+  }
+.logo{
+  width: 200px;
+}
+.search-box{
+  position: relative;
+  margin-right: 200px;
+  margin-top: 3px;
+}
+.search-input{
+  width: 500px;
+  height: 26px;
+  height: 36px;
+padding-left: 25px;
+border: 2px solid #303030;
+border-radius: 30px;
+background-color: #121212;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.search-input[placeholder]{
+  color: #717171;
+  /* margin-left: 10px; */
+  font-size: 19px;
+}
+.search-button{
+  position: absolute;
+  top: 0px;
+right: 0px;
+height: 40px;
+width: 53px;
+  color:white;
+  background-color: #272727;
+  border: none;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  cursor: pointer;
+}
+.search-icon{
+  color: white;
+  
+}
+.user-picture{
+  width: 40px;
+  margin-top: 3px;
 }
